--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.7.0",
     "autoprefixer": "^9.8.6",
     "heroicons-react": "^1.3.0",
+    "luxon": "^1.26.0",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
