--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "autoprefixer": "^9.8.6",
+    "classnames": "^2.2.6",
     "faker": "^5.4.0",
     "heroicons-react": "^1.3.0",
     "luxon": "^1.26.0",
+    "popper.js": "1.15.0",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
