--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "autoprefixer": "^9.8.6",
     "classnames": "^2.2.6",
     "faker": "^5.4.0",
@@ -19,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
+    "typescript": "^4.2.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -44,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.11",
+    "@types/faker": "^5.1.7",
+    "@types/luxon": "^1.26.0"
   }
 }
